v0.1.4 (XXX)
- Wrapper#font_size now accepts a block for temporary font size changes
- Allow the page size to be changed when starting a new page

v0.1.3 (24th July 2008)
- Require the gem version of cairo
  - >= 1.5. However I recommend >= 1.6.3 to avoid FATAL error under 1.8.7
- Removed Wrapper#scale. Was causing more trouble than it's worth. May re-implement later.
- Allow the render functions to be called multiple times
- Added Wrapper#finished?
- rename Wrapper#render_to_file to Wrapper#render_file.
  - old method still exists with a deprecation warning
- add :rotate option to Wrapper#image (thanks Lourens Naudé)
- borrowed some convenience methods for co-ordinate manipulation from Prawn
- Wrapper#translate now resets the point to 0,0 before yielding

v0.1.1 (Unreleased)
- use a proxy object when building repeating objects to prevent a new page being started

v0.1.0 (28th May 2008)
- added PDF::Wrapper#translate and PDF::Wrapper#scale
- fixed a bug that caused some text to be rendered off the page when wrapping onto 3rd and 
  subsequent pages
- Improved table support using a new class PDF::Wrapper::Table
- Added a :center option to Wrapper#image
- Added a :markup option to text related functions. Pango markup can be used to tweak 
  text style (bold, italics, super script, etc)
- Replaced PDF::Wrapper#rounded_rectangle with the :radius option to PDF::Wrapper#rectangle
- Allow cells to have a border with rounded corners

v0.0.7 (30th April 2008)
- Added support for creating new pages from a template file (pdf/png/jpg/gif/svg/probably more)
- Convert the params to start_new_page to be an options hash
- Added a :padding option to PDF::Wrapper#image

v0.0.6 (28th April 2008)
- Fix a nasty bug in text layout code

v0.0.5 (27th April 2008)
- Fix crash when inserting multiple images
- added PDF::Wrapper#pad
- added PDF::Wrapper#text_width
- added support for customisable page margins (thanks to Paweł Kondzior)