@@ -19,7 +19,6 @@ module PDF
       # TODO: add support for a table footer
       #       - repeating each page, or just at the bottom? 
       #       - if it repeats, should it be different on each page? ie. a sum of that pages rows, etc.
-      # TODO: add support for manually specifying 1 or more column widths
       # TODO: maybe support for multiple data sets with group headers/footers. useful for subtotals, etc
 
       x, y = current_point
@@ -86,6 +85,8 @@ module PDF
       #       moment I'm stripping all pango markup tags from the string, which means if any character is made
       #       intentioanlly large, we'll miss it and it might not fit into our table cell.
       # TODO: allow column widths to be set manually
+
+      # calculate the min and max width of every cell in the table
       t.cells.each_with_index do |row, row_idx|
         row.each_with_index do |cell, col_idx|
           opts = t.options_for(col_idx, row_idx).only(default_text_options.keys)
@@ -94,6 +95,8 @@ module PDF
           cell.max_width  = text_width(cell.data, opts) + (padding * 4)
         end
       end
+
+      # calculate the min and max width of every cell in the headers row
       if t.headers
         t.headers.each_with_index do |cell, col_idx|
           opts = t.options_for(col_idx, :headers).only(default_text_options.keys)
@@ -102,7 +105,12 @@ module PDF
           cell.max_width  = text_width(cell.data, opts) + (padding * 4)
         end
       end
+
+      # let the table decide on the actual widths it will use for each col
       t.calc_col_widths!
+
+      # now that we know how wide each column will be, we can calculate the 
+      # height of every cell in the table
       t.cells.each_with_index do |row, row_idx|
         row.each_with_index do |cell, col_idx|
           opts = t.options_for(col_idx, row_idx).only(default_text_options.keys)
@@ -110,7 +118,11 @@ module PDF
           cell.height = text_height(cell.data, t.col_width(col_idx) - (padding * 2), opts) + (padding * 2)
         end
       end
+
+      # let the table calculate how high each row is going to be
       t.calc_row_heights!
+
+      # perform the same height calcs for the header row if necesary
       if t.headers
         t.headers.each_with_index do |cell, col_idx|
           opts = t.options_for(col_idx, :headers).only(default_text_options.keys)
@@ -178,6 +190,7 @@ module PDF
     #      t.row_options 2, :color => :red
     #      t.col_options 0, :color => :blue
     #      t.cell_options 2, 2, :font_size => 18
+    #      t.manual_column_width 2, 40
     #    end
     #    pdf.table(table)
     #
@@ -202,6 +215,7 @@ module PDF
         @table_options  = {}
         @col_options    = Hash.new({})
         @row_options    = Hash.new({})
+        @manual_col_widths = {}
         @header_options = {}
         @show_headers  = :page
 
@@ -283,6 +297,25 @@ module PDF
         self
       end
 
+      # Manually set the width for 1 or more columns 
+      #
+      # <tt>spec</tt>::     Which columns to set the width for. :odd, :even, a range, an Array of numbers or a number
+      #
+      def manual_col_width(spec, width)
+        width = width.to_f
+        each_column do |col_idx|
+          if (spec == :even && (col_idx % 2) == 0) ||
+             (spec == :odd  && (col_idx % 2) == 1) ||
+             (spec.class == Range && spec.include?(col_idx)) ||
+             (spec.class == Array && spec.include?(col_idx)) ||
+             (spec.respond_to?(:to_i) && spec.to_i == col_idx)
+            
+            @manual_col_widths[col_idx] = width
+          end
+        end
+        self
+      end
+
       # set options that apply to 1 or more rows
       # For a list of valid options, see Wrapper#cell.
       # <tt>spec</tt>::     Which columns to add the options to. :odd, :even, a range, an Array of numbers or a number
@@ -302,7 +335,7 @@ module PDF
 
       # calculate the combined options for a particular cell
       #
-      # To get the options for a regular cell, use numbers to refernce the exact cell:
+      # To get the options for a regular cell, use numbers to reference the exact cell:
       #
       #    options_for(3, 3)
       #
@@ -375,7 +408,7 @@ module PDF
 
       private
 
-      # the main smarts behind deciding on the width of each column. If possible, 
+      # the main smarts behind deciding on the width of each column. If possible,
       # each cell will get the maximum amount of space it wants. If not, some
       # negotiation happens to find the best possible set of widths.
       def calc_column_widths
@@ -396,6 +429,13 @@ module PDF
           end
         end
 
+        # override the min and max col widths with manual ones where appropriate
+        # freeze the values so that the algorithm that adjusts the widths
+        # leaves them untouched
+        @manual_col_widths.each { |key, val| val.freeze }
+        max_col_widths.merge! @manual_col_widths
+        min_col_widths.merge! @manual_col_widths
+
         if min_col_widths.values.sum > self.width
           raise RuntimeError, "table content cannot fit into a table width of #{self.width}"
         end
@@ -415,18 +455,24 @@ module PDF
         col_widths
       end
 
-      # ceck to ensure every cell has a minimum and maximum cell width defined
+      # check to ensure every cell has a minimum and maximum cell width defined
       def check_cell_widths
         @cells.each do |row|
-          row.each do |cell|
+          row.each_with_index do |cell, col_idx|
             raise "Every cell must have a min_width defined before being rendered to a document" if cell.min_width.nil?
             raise "Every cell must have a max_width defined before being rendered to a document" if cell.max_width.nil?
+            if @manual_col_widths[col_idx] && cell.min_width > @manual_col_widths[col_idx]
+              raise "Manual width for col #{col_idx} is too low"
+            end
           end
         end
         if @headers
-          @headers.each do |cell|
+          @headers.each_with_index do |cell, col_idx|
             raise "Every header cell must have a min_width defined before being rendered to a document" if cell.min_width.nil?
             raise "Every header cell must have a max_width defined before being rendered to a document" if cell.max_width.nil?
+            if @manual_col_widths[col_idx] && cell.min_width > @manual_col_widths[col_idx]
+              raise "Manual width for col #{col_idx} is too low"
+            end
           end
         end
       end
@@ -458,9 +504,9 @@ module PDF
       # if the widths of every column are less than the total width
       # of the table, grow them to make use of it.
       #
-      # col_widths - the cuurect hash of widths for each column index
+      # col_widths - the current hash of widths for each column index
       # max_col_widths - the maximum width each column desires
-      # pas_max - can the width of a colum grow beyond its maximum desired
+      # past_max - can the width of a colum grow beyond its maximum desired
       def grow_col_widths(col_widths, max_col_widths, past_max = false)
         loop do
           each_column do |idx|
