@@ -1,6 +1,8 @@
 v0.1.4 (XXX)
 - Wrapper#font_size now accepts a block for temporary font size changes
 - Allow the page size to be changed when starting a new page
+- Added support for manually setting table column widths
+  - prevents the column widths from growing or shrinking automatically
 
 v0.1.3 (24th July 2008)
 - Require the gem version of cairo
